test/expressions/new-expr/new-on-enum.chpl
enum Color {
  red, orange, yellow, green, blue, indigo, violet
}

proc main() {
  var x : int = new Color();

  writeln(x);
}
